master

- also test against JRuby, Rubinius, and 1.9.2

- running verbosely works again

- extended help

0.4

- let users organize their config files in directories

0.3.1

- fix bootstrapping, opened ticket for Aruba
  (https://github.com/cucumber/aruba/issues/115)

0.3

- options: Use env var POET_OUTPUT in addition to --output and POET_GLOBDIR in addition to --dir

- bootstrapping support

0.2

- testing with Aruba

- new CLI options --output and --dir

- Dropped CLI option --only

0.0.1

- Initial release as gem