@@ -1,38 +1,5 @@
 #!/usr/bin/env ruby
 
-require 'optparse'
 require 'poet'
 
-options = {
-  :ssh_config => ENV['POET_OUTPUT'] || File.expand_path('~/.ssh/config'),
-  :verbose => false,
-  :with => [],
-  :dir => ENV['POET_GLOBDIR'] || File.expand_path('~/.ssh/config.d')
-}
-
-optparse = OptionParser.new do|opts|
-  opts.on('-h', '--help', 'Display this screen') do
-    puts opts
-    exit
-  end
-  opts.on('-d', '--dir DIR', 'Use specified directory instead of ~/.ssh/config.d to collect conf files') do |dir|
-    options[:dir] = File.expand_path(dir)
-  end
-  opts.on('-o', '--output FILE', 'Generate output in specified file instead of ~/.ssh/config') do |file|
-    options[:ssh_config] = file
-  end
-  opts.on('-v', '--verbose', 'Be verbose') do
-    options[:verbose] = true
-  end
-  opts.on('--bootstrap [FILE]',
-      'Move ~/.ssh/config (or whatever you specified) to ~/.ssh/config.d/ to help you get started') do |file|
-    options[:bootstrap] = File.expand_path(file || options[:ssh_config])
-  end
-  opts.on('-w', '--with CONFIG', 'Include an otherwise disabled config file') do |file|
-    options[:with] += file.split(',')
-    options[:with].each{|file| puts "Including #{file} even if disabled..."}
-  end
-end
-optparse.parse!
-
-Poet.application(options).run
+PoetCLI.start(ARGV)
