@@ -22,4 +22,5 @@ Gem::Specification.new do |s|
   s.add_development_dependency "cucumber"
   s.add_development_dependency "aruba"
   s.add_development_dependency "rake"
+  s.add_runtime_dependency "thor"
 end
